Add handler for tasks
